[metadata]
name = cmdtube
version = 0.0.3
author = Samuel Ogunleke
author_email = samuelayomidehssp@gmail.com
description = A command-line interface for programmers who use YouTube
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Samuel-HSSP/cmdtube
project_urls =
    Bug Tracker = https://github.com/Samuel-HSSP/cmdtube/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    termcolor
    tqdm
    youtube-search; python_version == "2.1.0"
    pytube; python_version == "11.0.2"

[options.packages.find]
where = src
